--- a/main.html
+++ b/main.html
@@ -10,6 +10,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<table>
+		<th>roll number</th>
+		<th>name</th>
+		<tr>
+			<td>581</td>
+			<td>manoj</td>
+		</tr>
+		<tr>
+			<td>579</td>
+			<td>harsha</td>
+		</tr>
+	</table>
 
 </body>
 
