--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 </script>
 	<table>
 		<tr>
-		<th>roll number</th>
-		<th>name</th>
+		<thead>roll number</thead>
+		<thead>name</thead>
 		</tr>
 		<tr>
 			<td>581</td>
