--- a/main.html
+++ b/main.html
@@ -11,10 +11,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<table>
+		<thead>
 		<tr>
 		<th>roll number</th>
 		<th>name</th>
 		</tr>
+		</thead>
 		<tr>
 			<td>581</td>
 			<td>manoj</td>
